--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@fontsource/syne": "^5.0.17",
+    "@iconify-json/devicon": "^1.1.29",
     "@vueuse/motion": "^2.0.0"
   }
 }
